# kernelmoments

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  google7e6738d84e242c48 (1).html  index.html  pyproject.toml
benchmarks/: benchmark_fitting.py
examples/: hero_figure.py  tutorial.ipynb  wages.ipynb
kernelmoments/: __init__.py  estimators.py  plotter.py  utils.py
